--- a/applications/electron/resources/preload.html
+++ b/applications/electron/resources/preload.html
@@ -44,11 +44,11 @@
             animation-delay: 0;
             animation-duration: 2s;
             animation-iteration-count: infinite;
-            animation-name: theia-ide-spinner;
+            animation-name: cdt-cloud-blueprint-spinner;
             animation-timing-function: ease;
         }
 
-        @keyframes theia-ide-spinner {
+        @keyframes cdt-cloud-blueprint-spinner {
             0% {
                 filter: brightness(25%) contrast(80%) drop-shadow( 0 0 20px #fff) drop-shadow( 0 0 25px #e60073) drop-shadow( 0 0 40px #e60073);
                 transform: scale(0.8);
